# double-turbo

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  deploy-prod.sh  docker-compose.yml  pyproject.toml  readme.md  setup.py
api/: adapters.py  admin.py  celery.py  permissions.py  urls.py
api/mock_data/: users.json
api/models/: __init__.py  user.py
api/serializers/: user.py
api/settings/: __init__.py  auth.py  celery.py  db.py  email.py  log.py  rest.py  settings.py  stripe.py  unfold.py
api/static/css/: admin.css
api/views/: user.py
server/: celery-beat.service  celery.service  default-nginx.conf
