[project]
name = "api"
requires-python = ">=3.13"
version = "0.1.0"
dependencies = [
    "django>=5.1",
    "psycopg[binary]>=3.2",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-unfold>=0.43.0",
    "turbodrf @ git+https://github.com/Mte90/TurboDRF.git@all",
    "python-dotenv>=1.1.1",
    "django-extensions>=4.1",
    "django-split-settings>=1.3.2",
    "django-watchfiles>=1.1.0",
    "django-compressor>=4.5.1",
    "stripe==12.5.1",
    "drf-stripe-subscription @ git+https://github.com/Mte90/drf-stripe-subscription.git@master",
    "django-prometheus>=2.4.1",
    "django-auditlog>=3.2.1",
    "django-easy-logging>=0.70",
    "drf-api-tracking>=1.8.4",
    "django-allauth>=65.10.0",
    "django-hijack>=3.7.4",
    "django-celery>=3.1.17",
    "django-celery-beat>=2.8.1",
    "django-compressor>=4.5.1",
    "dj-rest-auth @ git+https://github.com/Mte90/dj-rest-auth.git@patch-1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "pytest-factoryboy>=2.7.0",
    "pytest-cov>=6.2.1",
    "django-cors-headers>=4.7.0",
    "ruff>=0.0.280",
    "pre-commit>=3.3.3",
    "django-types>=0.22.0",
    "basedpyright>=1.36.1",
    "debugpy>=1.8.18",
    "django-debug-toolbar>=6.0.0",
    "djangorestframework-types>=0.9.0",
]

[tool.ruff]
fix = true
line-length = 88
exclude = ["api/settings", "setup.py", "api/migrations", "api/tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
filterwarnings = "ignore"
addopts = "--strict-config --strict-markers --ds=api.settings"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
combine_as_imports = true

[tool.pyright]
reportOptionalMemberAccess = false
reportMissingTypeStubs = false
reportCallIssue = true
reportUnannotatedClassAttribute = false
reportUntypedClassDecorator = false
reportUntypedFunctionDecorator = false
reportFunctionMemberAccess = false
reportMissingParameterType = false
reportImplicitOverride = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownMemberType = false
reportAny = false
reportUnknownArgumentType = false
reportAttributeAccessIssue = false
stubPath = ".venv/stubs"
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
filterwarnings = "ignore"
addopts = "--strict-config --strict-markers --ds=api.settings"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
combine_as_imports = true

[tool.pyright]
reportOptionalMemberAccess = false
reportMissingTypeStubs = false
reportCallIssue = true
reportUnannotatedClassAttribute = false
reportUntypedClassDecorator = false
reportUntypedFunctionDecorator = false
reportFunctionMemberAccess = false
reportMissingParameterType = false
reportImplicitOverride = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownMemberType = false
reportAny = false
reportUnknownArgumentType = false
reportAttributeAccessIssue = false
stubPath = ".venv/stubs"
